--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1331,4 +1331,5 @@ contacts.arm.title=Armenian office
 contacts.arm.phone=+1
 btcWallet.receive.title=Receive
 wallets.downloadUserIps=Download users summary
-message.create.refill.request=Create refill request(Crypto)
+message.create.refill.request=Create refill request(for crypto)
+message.refill.manual.created=Refill request in status ON_PENDING with ID {0} created
