--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1373,4 +1373,5 @@ contacts.arm.address=<p>GameCredits, Ltd.</p>\
   <p>\u0415\u0440\u0435\u0432\u0430\u043D, \u0410\u0440\u043C\u0435\u043D\u0438\u044F</p>
 contacts.arm.phone=+37460465980
 wallets.downloadUserIps=\u0412\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C \u0441\u0432\u043E\u0434\u043A\u0443 \u043F\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\u043C
-message.create.refill.request=Create refill request(Crypto)
+message.create.refill.request=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443(\u0434\u043B\u044F \u043A\u0440\u0438\u043F\u0442\u043E\u0432\u0430\u043B\u044E\u0442)
+message.refill.manual.created=\u0417\u0430\u044F\u0432\u043A\u0430 \u043D\u0430 \u043F\u043E\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0435 \u0432 \u0441\u0442\u0430\u0442\u0443\u0441\u0435 ON_PENDING \u0441 ID {0} \u0441\u043E\u0437\u0434\u0430\u043D\u0430
