--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1301,3 +1301,8 @@ admin.autoTrading.settings.stepDeviation=Price step deviation (% of price step)
 admin.autoTrading.settings.randomStep=Randomized price step
 zecWallet.title=Zcash wallet
 input.warning.WAVES=WAVES default fee will be subtracted from your payment!
+admin.generalStats.title=General Statistics
+admin.generalStats.button.currencies=Currency turnover statistics
+admin.generalStats.button.currencyPairs=Currency pairs turnover statistics
+admin.stats.download=Download
+admin.users.new=New users registered
