--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1370,3 +1370,4 @@ admin.autoTrading.settings.stepDeviation=Price step deviation (% of price step)
 admin.autoTrading.settings.randomStep=Randomized price step
 zecWallet.title=Zcash wallet
 input.warning.WAVES=WAVES default fee will be subtracted from your payment!
+admin.toSettings=To settings
