--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1418,9 +1418,22 @@ admin.users.new=New users registered
 ip.ban.message=Your IP address is banned for {0}. Please try to login again later
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
-message.alertUpdate=Update of exchange will performed in __time . Exchange will unavailable for {} minutes
+message.alertUpdate=Attention! In the near future an update will be made. The exchange will not be available for {0} minutes.
 admin.transferCommissions=Transfer comissions
 admin.merchantsCommissions.transfer=Comission for transfer
 admin.merchantsCommissions.minSum=Min transfer sum
 admin.merchantsCommissions.minFixedForTransfer=Min comission for transfer
 admin.editTransferCommission=Transfer Commissions
+admin.alarm.active=Active
+admin.alarm.lengthMinutes=Length in minutes
+admin.alarm.timeToStart=Time to start
+admin.alertsForUsers=Alerts for users
+admin.alertsSettings=Alerts settings
+message.alertTechWorks=Technical works performing now. Exchange may works unstable
+admin.alert.aboutUpdate=Alert about update
+admin.alert.aboutTechWorks=Alert about tech works
+admin.alarm.timeOfStart=Time of begin
+message.alert.timerTimeTo=Time to start update
+message.alert.hours=Hours
+message.alert.minutes=Minutes
+message.alert.seconds=Seconds
