--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1375,7 +1375,7 @@ admin.address.additionalFieldName=Additional address field name
 admin.refillAdresses=Refill addresses
 b2xWallet.title=Segwit2X wallet
 message.additional.deposit.warning=Deposit coins/tokens ONLY to this address. Depositing tokens to addresses other than {0} will result in your funds being lost.
-message.additional.address.warning.XLM=If the memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+message.additional.address.warning.XLM=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 message.additional.address.warning.XRP=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
 message.additional.address.warning.XEM=When depositing, please send your message unencrypted. Please do not send mosaic or multisig transactions. They will not be credited.\
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
@@ -1431,7 +1431,7 @@ admin.currency.id=Currency id
 admin.rate.to.usd=Rate to USD
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
-message.additional.address.warning.SLT=If the memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+message.additional.address.warning.SLT=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 btxWallet.title=BitCore Wallet
 xbdWallet.title=BitDollar wallet
 message.additional.address.warning.NPXSXEM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
@@ -1457,4 +1457,4 @@ ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
 admin.btcWallet.title={0} wallet
 brecoWallet.title=BitcoinReco wallet
-message.additional.address.warning.VNT=If the destination memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
