--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1474,7 +1474,7 @@ admin.refillAdresses=Refill addresses
 b2xWallet.title=Segwit2X wallet
 merchants.input.recommendedMinSum=Recommended minimal sum for refill:
 message.additional.deposit.warning=Deposit coins/tokens ONLY to this address. Depositing tokens to addresses other than {0} will result in your funds being lost.
-message.additional.address.warning.XLM=If the memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+message.additional.address.warning.XLM=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 message.additional.address.warning.XRP=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
 message.additional.address.warning.XEM=When depositing, please send your message unencrypted. Please do not send mosaic or multisig transactions. They will not be credited.\
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
@@ -1533,7 +1533,7 @@ admin.rate.to.usd=Rate to USD
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
-message.additional.address.warning.SLT=If the memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+message.additional.address.warning.SLT=If the memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 btxWallet.title=BitCore Wallet
 xbdWallet.title=BitDollar wallet
 message.additional.address.warning.NPXSXEM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
@@ -1562,4 +1562,4 @@ merchants.withdrawNotification.IN_WORK_OF_ADMIN=Your withdraw request #{0} is be
 merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is waiting reviewing by the administrator
 merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
-message.additional.address.warning.VNT=If the destination memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
